--- a/public/css/login.css
+++ b/public/css/login.css
@@ -9,6 +9,7 @@
 
 body {
     background: linear-gradient(90deg, #d68e91, #bc2228);
+    overflow: hidden;
 }
 
 .container {
@@ -175,4 +176,17 @@ body {
 
 .social-login__icon:hover {
     transform: scale(1.5);
+}
+.create__account__a {
+    text-decoration: none;
+    color: #ffff;
+    font-size: 13px;
+}
+.create__account__a:hover {
+    color: tomato;
+    transform: scale(1.1);
+}
+.create__account__a h3 {
+    margin-top: 5rem;
+    margin-right: 0.5rem;
 }
