--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,4 +1,3 @@
-
 :root {
     --header-outer-height: 110px;
     --header-inner-height: 70px;
@@ -14,10 +13,20 @@ body {
     padding: 0;
     background-color: #f2f5f7;
     line-height: 1.5;
-    min-height: 300vh;
     position: relative;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
-h1, h2, h3, h4, h5, h6 {
+main{
+    flex: 1;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-family: "Roboto", sans-serif; /* Thiết lập font chữ cho tiêu đề */
     /* Các thiết lập khác cho tiêu đề */
 }
