--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -1,3 +1,7 @@
+body {
+    overflow-x: hidden;
+}
+
 .container {
     width: 100%;
     height: 100%;
@@ -7,7 +11,7 @@
     padding: 100px 160px;
 }
 main {
-    margin-top: 24px;
+    margin-top: 12px;
 }
 .background-image {
     position: relative;
@@ -127,7 +131,7 @@ main {
 }
 .footer-container {
     margin-top: 100px;
-    background-color: #0e1466;
+    background-color: #333447;
     color: #fff;
     text-align: center;
 }
@@ -140,4 +144,7 @@ main {
     width: 50%;
     margin-top: 20px;
 }
-
+.footer-end-p{
+    margin-bottom: 0;
+    padding-bottom: 20px;
+}
