--- a/public/css/home.css
+++ b/public/css/home.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    font-family: "Montserrat", sans-serif;
+    font-family: 'Montserrat', sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f2f5f7;
