--- a/public/css/createBlog.css
+++ b/public/css/createBlog.css
@@ -42,3 +42,13 @@ button[type="submit"] {
 button[type="submit"]:hover {
     background-color: #45a049;
 }
+.error {
+    color: red;
+    font-size: 14px;
+    margin-top: 5px;
+}
+textarea {
+    height: 10em;     
+    width: 40em;    
+    padding: 10px;
+}
