--- a/public/css/createBlog.css
+++ b/public/css/createBlog.css
@@ -10,11 +10,11 @@
     border-radius: 8px;
 }
 .cover-blog h3{
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 .input-group {
     width: 100%;
-    margin-bottom: 25px;
+    margin-top: 25px;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -28,6 +28,8 @@ textarea.input-group {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: 20px;
+
 }
 button[type="submit"] {
     background-color: #4CAF50;
@@ -46,9 +48,13 @@ button[type="submit"]:hover {
     color: red;
     font-size: 14px;
     margin-top: 5px;
+    margin-bottom: 5px;
 }
 textarea {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 14px;
     height: 10em;     
-    width: 40em;    
+    width: 37em;    
     padding: 10px;
+    margin-top: 20px;
 }
