Update create blog

--- a/public/css/createBlog.css
+++ b/public/css/createBlog.css
@@ -64,7 +64,7 @@ textarea {
 }
 
 .upload-blog-image label {
-    display: block;
+    display: inline-block;
     margin-bottom: 5px;
     font-weight: normal;
 }
